--- a/Pages/newArrivals.html
+++ b/Pages/newArrivals.html
@@ -59,7 +59,7 @@
                 <h3><a href="spinachClothing.html">Spinach Clothing</a></h3>
                 <h3><a href="/Pages/sales.html">SALE</a></h3>
                 <p>-----------</p>
-                <img src="../images/BannerPromo.png" alt ='BannerPromo'/>
+                <img src="../images/PromoBanner.png" alt ='BannerPromo'/>
             </div>
         </div>
     </div>
@@ -67,5 +67,6 @@
 </div>
 
     </div>
+    <script src="/main.jsx"></script>
 </body>
 </html>
