--- a/Pages/index.html
+++ b/Pages/index.html
@@ -123,19 +123,19 @@
       <div class="piedepagina">
         <div class="firstcolumn">
           <ul>
-            <li><a href="">Shop</a></li>
-            <li><a href="">NEW ARRIVALS</a></li>
-            <li><a href="">Artframes</a></li>
-            <li><a href="">Spinach Clothing</a></li>
-            <li><a href="">SALE</a></li>
+            <li><a href="/Pages/newArrivals.html">Shop</a></li>
+            <li><a href="/Pages/newArrivals.html">NEW ARRIVALS</a></li>
+            <li><a href="/Pages/artframes.html">Artframes</a></li>
+            <li><a href="/Pages/spinachClothing.html">Spinach Clothing</a></li>
+            <li><a href="/Pages/sales.html">SALE</a></li>
           </ul>
         </div>
         <div class="secondcolumn">
           <ul>
-            <li><a href="">About us</a></li>
+            <li><a href="/Pages/aboutus.html">About us</a></li>
             <li><a href="">Facebook</a></li>
-            <li><a href="">Instagram</a></li>
-            <li><a href="">TikTok</a></li>
+            <li><a href="https://www.instagram.com/hostudiotn/">Instagram</a></li>
+            <li><a href="https://www.tiktok.com/@hostudiotn">TikTok</a></li>
             <li><a href="">Youtube</a></li>
           </ul>
         </div>
