photos, products and prices added on html, but working on making it referenced from a db

--- a/Pages/artframes.html
+++ b/Pages/artframes.html
@@ -52,30 +52,30 @@
 <body>
     <div class="catalog">
         <div class="leftcatalog">
-        <div class="leftProduct"><img src="/images/BannerPromo.png"/>
-            <p>Product Name</p>
-            <p>Price:</p>
+        <div class="leftProduct"><img src="/images/ArtframeProducts/Artframe1.jpeg"/>
+            <p>The Base Gardening</p>
+            <p>Price: 60$</p>
         </div>
-        <div class="centerProduct"><img src="/images/BannerPromo.png"/>
-            <p>Product Name</p>
-            <p>Price:</p>
+        <div class="centerProduct"><img src="/images/ArtframeProducts/Artframe2.jpeg"/>
+            <p>PinkyRed in the Dark</p>
+            <p>Price: 100$</p>
         </div>
-        <div class="rightProduct"><img src="/images/BannerPromo.png"/>
-            <p>Product Name</p>
-            <p>Price:</p>
+        <div class="rightProduct"><img src="/images/ArtframeProducts/Artframe3.jpeg"/>
+            <p>Cascades in the City</p>
+            <p>Price: 45$</p>
         </div>
         <div class="leftProduct2">
-        <div class="leftProduct"><img src="/images/BannerPromo.png"/>
-            <p>Product Name</p>
-            <p>Price:</p>
+        <div class="leftProduct"><img src="/images/ArtframeProducts/Artframe4.jpeg"/>
+            <p>The Base Geisha</p>
+            <p>Price: 120$</p>
         </div>
-        <div class="centerProduct"><img src="/images/BannerPromo.png"/>
-            <p>Product Name</p>
-            <p>Price:</p>
+        <div class="centerProduct"><img src="/images//ArtframeProducts/Artframe5.jpeg"/>
+            <p>Neiborhood in childhood</p>
+            <p>Price: 70$</p>
         </div>
-        <div class="rightProduct"><img src="/images/BannerPromo.png"/>
-            <p>Product Name</p>
-            <p>Price:</p>
+        <div class="rightProduct"><img src="/images/ArtframeProducts/Artframe6.jpeg"/>
+            <p>MangoPeach</p>
+            <p>Price: 20$</p>
         </div>
         </div>
         </div>
