--- a/Pages/index.html
+++ b/Pages/index.html
@@ -59,7 +59,7 @@
       <div class="slide1">
         <div class="left">
           <h1>NEW ARRIVALS</h1>
-          <h2><a href="" class="btn">Shop Now</a></h2>
+          <h2><a href="/Pages/newArrivals.html" class="btn">Shop Now</a></h2>
         </div>
 
         <div class="center">
@@ -87,17 +87,17 @@
             src="../images/SpinachClothing.png"
             alt="SpinachClothingBanner"
           />
-          <h2><a href="">Spinach Clothing</a></h2>
+          <h2><a href="/Pages/spinachClothing.html">Spinach Clothing</a></h2>
         </div>
       </div>
       <div class="divright">
         <div class="flowers">
           <img src="../images/Flowers.png" alt="FlowersBanner" />
-          <h2><a href="">Flowers</a></h2>
+          <h2><a href="/Pages/flowers.html">Flowers</a></h2>
         </div>
         <div class="SALE">
           <img src="../images/SALE.png" alt="SaleBanner" />
-          <h2><a href="">SALE</a></h2>
+          <h2><a href="/Pages/sales.html">SALE</a></h2>
         </div>
       </div>
     </div>
@@ -113,7 +113,7 @@
       </div>
       <div class="right">
         <h1>
-          <a href="">Personalized<br />Content</a>
+          <a href="/Pages/sales.html">Personalized<br />Content</a>
         </h1>
       </div>
     </div>
