--- a/Pages/newArrivals.html
+++ b/Pages/newArrivals.html
@@ -52,30 +52,30 @@
 <body>
     <div class="catalog">
         <div class="leftcatalog">
-        <div class="leftProduct"><img src="/images/BannerPromo.png"/>
-            <p>Product Name</p>
-            <p>Price:</p>
+        <div class="leftProduct"><img src="/images/ClotheProducts/Clothe1.jpeg"/>
+            <p>Surf Sweater</p>
+            <p>Price: 50$</p>
         </div>
-        <div class="centerProduct"><img src="/images/BannerPromo.png"/>
-            <p>Product Name</p>
-            <p>Price:</p>
+        <div class="centerProduct"><img src="/images/ClotheProducts/Clothe5.jpeg"/>
+            <p>Exthinguisher Hoodie</p>
+            <p>Price: 75$</p>
         </div>
-        <div class="rightProduct"><img src="/images/BannerPromo.png"/>
-            <p>Product Name</p>
-            <p>Price:</p>
+        <div class="rightProduct"><img src="/images/ClotheProducts/Clothe12.jpeg"/>
+            <p>TypeScrypt T-Shirt</p>
+            <p>Price: 30$</p>
         </div>
         <div class="leftProduct2">
-        <div class="leftProduct"><img src="/images/BannerPromo.png"/>
-            <p>Product Name</p>
-            <p>Price:</p>
+        <div class="leftProduct"><img src="/images/ClotheProducts/Clothe2.jpeg"/>
+            <p>Skate wall Sweater</p>
+            <p>Price: 50$</p>
         </div>
-        <div class="centerProduct"><img src="/images/BannerPromo.png"/>
-            <p>Product Name</p>
-            <p>Price:</p>
+        <div class="centerProduct"><img src="/images/ClotheProducts/Clothe6.jpeg"/>
+            <p>Tennis Court Hoodie</p>
+            <p>Price: 75$</p>
         </div>
-        <div class="rightProduct"><img src="/images/BannerPromo.png"/>
-            <p>Product Name</p>
-            <p>Price:</p>
+        <div class="rightProduct"><img src="/images/ClotheProducts/Clothe10.jpeg"/>
+            <p>Old Camera T-Shirt</p>
+            <p>Price: 30$</p>
         </div>
         </div>
         </div>
