--- a/Pages/sales.html
+++ b/Pages/sales.html
@@ -52,30 +52,30 @@
 <body>
     <div class="catalog">
         <div class="leftcatalog">
-        <div class="leftProduct"><img src="/images/BannerPromo.png"/>
-            <p>Product Name</p>
-            <p>Price:</p>
+        <div class="leftProduct"><img src="/images/SaleProducts/Sale1.jpeg"/>
+            <p>Personalized Mug</p>
+            <p>Price: 15$</p>
         </div>
-        <div class="centerProduct"><img src="/images/BannerPromo.png"/>
-            <p>Product Name</p>
-            <p>Price:</p>
+        <div class="centerProduct"><img src="/images/SaleProducts/Sale2.jpeg"/>
+            <p>Magazine Cover</p>
+            <p>Price: 10$</p>
         </div>
-        <div class="rightProduct"><img src="/images/BannerPromo.png"/>
-            <p>Product Name</p>
-            <p>Price:</p>
+        <div class="rightProduct"><img src="/images/SaleProducts/Sale3.jpeg"/>
+            <p>Personalized Book Front</p>
+            <p>Price: 15$</p>
         </div>
         <div class="leftProduct2">
-        <div class="leftProduct"><img src="/images/BannerPromo.png"/>
-            <p>Product Name</p>
-            <p>Price:</p>
+        <div class="leftProduct"><img src="/images/SaleProducts/Sale4.jpeg"/>
+            <p>Personalized Cup</p>
+            <p>Price: 15$</p>
         </div>
-        <div class="centerProduct"><img src="/images/BannerPromo.png"/>
-            <p>Product Name</p>
-            <p>Price:</p>
+        <div class="centerProduct"><img src="/images/SaleProducts/Sale5.jpeg"/>
+            <p>Personalized drops jar</p>
+            <p>Price: 15$</p>
         </div>
-        <div class="rightProduct"><img src="/images/BannerPromo.png"/>
-            <p>Product Name</p>
-            <p>Price:</p>
+        <div class="rightProduct"><img src="/images/SaleProducts/Sale6.jpeg"/>
+            <p>Personalized Mat</p>
+            <p>Price: 20$</p>
         </div>
         </div>
         </div>
