--- a/Pages/spinachClothing.html
+++ b/Pages/spinachClothing.html
@@ -52,30 +52,30 @@
 <body>
     <div class="catalog">
         <div class="leftcatalog">
-        <div class="leftProduct"><img src="/images/BannerPromo.png"/>
-            <p>Product Name</p>
-            <p>Price:</p>
+        <div class="leftProduct"><img src="/images/ClotheProducts/Clothe3.jpeg"/>
+            <p>Hoop Up Sweater</p>
+            <p>Price: 50$</p>
         </div>
-        <div class="centerProduct"><img src="/images/BannerPromo.png"/>
-            <p>Product Name</p>
-            <p>Price:</p>
+        <div class="centerProduct"><img src="/images/ClotheProducts/Clothe7.jpeg"/>
+            <p>HangOut Camera</p>
+            <p>Price: 75$</p>
         </div>
-        <div class="rightProduct"><img src="/images/BannerPromo.png"/>
-            <p>Product Name</p>
-            <p>Price:</p>
+        <div class="rightProduct"><img src="/images/ClotheProducts/Clothe9.jpeg"/>
+            <p>Skateboard T-Shirt</p>
+            <p>Price: 30$</p>
         </div>
         <div class="leftProduct2">
-        <div class="leftProduct"><img src="/images/BannerPromo.png"/>
-            <p>Product Name</p>
-            <p>Price:</p>
+        <div class="leftProduct"><img src="/images/ClotheProducts/Clothe8.jpeg"/>
+            <p>Spinach Hoodie</p>
+            <p>Price: 75$</p>
         </div>
-        <div class="centerProduct"><img src="/images/BannerPromo.png"/>
-            <p>Product Name</p>
-            <p>Price:</p>
+        <div class="centerProduct"><img src="/images/ClotheProducts/Clothe11.jpeg"/>
+            <p>Focal Point T-Shirt</p>
+            <p>Price: 30$</p>
         </div>
-        <div class="rightProduct"><img src="/images/BannerPromo.png"/>
-            <p>Product Name</p>
-            <p>Price:</p>
+        <div class="rightProduct"><img src="/images/ClotheProducts/Clothe4.jpeg"/>
+            <p>Polaroid Sweater</p>
+            <p>Price: 50$</p>
         </div>
         </div>
         </div>
