--- a/Pages/aboutus.html
+++ b/Pages/aboutus.html
@@ -46,7 +46,7 @@
               </div>
             
             <div class="navcenter">
-                <div class="logo"><a href='/Pages/index.html'>HO Studio</a></div>
+              <div class="logo"><a href='../index.html'>HO Studio</a></div>
             </div>
     
             <div class="navright">
