--- a/Pages/sales.html
+++ b/Pages/sales.html
@@ -32,7 +32,7 @@
                   </div>
                 
                 <div class="navcenter">
-                    <div class="logo"><a href='/Pages/index.html'>HO Studio</a></div>
+                    <div class="logo"><a href='../index.html'>HO Studio</a></div>
                 </div>
         
                 <div class="navright">
