--- a/index.html
+++ b/index.html
@@ -156,6 +156,6 @@
 
     <!--End of Footer-->
 
-    <script src="../main.jsx"></script>
+    <script src="/main.jsx"></script>
   </body>
 </html>
