Cart function added, some styles added to catalog, working on implement everything as a component and render it on the index.html like a React project

--- a/Pages/flowers.html
+++ b/Pages/flowers.html
@@ -12,34 +12,49 @@
         <nav>
             <div class="navleft">
         <div class="menuIcon">
-            <img src="/images/MenuVector.png" alt="menuVector"/>
+            <div class="container-menu-icon">
+                <img src="/images/MenuVector.png" alt="menuVector"/>
+            </div>
+            <div class="container-menu-list hidden-menu">
+                <h3>Shop</h3>
+                <h3><a href="/Pages/newArrivals.html">NEW ARRIVALS</a></h3>
+                <h3><a href="/Pages/artframes.html">Artframes</a></h3>
+                <h3><a href="/Pages/flowers.html">Flowers</a></h3>
+                <h3><a href="spinachClothing.html">Spinach Clothing</a></h3>
+                <h3><a href="/Pages/sales.html">SALE</a></h3>
+            </div>
         </div>
     </div>
     <div class="navcenter">
-        <div class="logo">HO Studio</div>
+        <div class="logo"><a href="/index.html">HO Studio</a></div>
     </div>
 
     
     <div class="navright">
         <div class="cartIcon">
-        <img class="cartVector" src="/images/CartVector.png" alt="CartVector"/>
+            <div class="container-cart-icon">
+                <img class="cartVector" src="/images/CartVector.png" alt="CartVector"/>
         <div class="count-products">
-            <span id="contador-">0</span>
+            <span id="contador-productos">0</span>
         </div>
-        <div class="container-cart-products
-        hidden-cart">
+            </div>
+        <div class="count-products">
+            <span id="contador-productos">0</span>
+        </div>
+        <div class="container-cart-products   hidden-cart">
+            <div class="row-product">
             <div class="cart-product">
                 <div class="info-cart-product">
-                    <span class="cantidad-producto-carrito">1</span>
-                    <p class ="titulo-producto-carrito">White Tulips</p>
-                    <span class="precio-producto-carrito">50$</span>
-                    <img class="icon-close" src="/images/CloseVector.png" alt="CloseVector"/>
+                    <span class="cantidad-producto-carrito">Your</span>
+                    <p class ="titulo-producto-carrito">Cart</p>
+                    <span class="precio-producto-carrito">It's</span>
+                    <p>Empty</p>
                 </div>
-                
+            </div>
             </div>
             <div class="cart-total">
-                <h3>Total:</h3>
-                <span class="total-pagar">200</span>
+                <h3>Total</h3>
+                <span class="total-pagar">$0</span>
             </div>
         </div>
         </div>
@@ -54,8 +69,8 @@
             </figure>
             <div class="info-product">
                 <h2>White Tulips</h2>
-                <p2>Price: 50$</p2>
-                <button>Add to cart</button>
+                <p>$50</p>
+                <button class="btn-add-cart">Add to cart</button>
             </div>
         </div>
         <div class="item">
@@ -64,8 +79,8 @@
             </figure>
             <div class="info-product">
                 <h2>Yellow Roses</h2>
-                <p2>Price: 150$</p2>
-                <button>Add to cart</button>
+                <p>$150</p>
+                <button class="btn-add-cart">Add to cart</button>
             </div>
         </div><div class="item">
             <figure>
@@ -73,8 +88,8 @@
             </figure>
             <div class="info-product">
                 <h2>Decorative SunF</h2>
-                <p2>Price: 5$</p2>
-                <button>Add to cart</button>
+                <p>$5</p>
+                <button class="btn-add-cart">Add to cart</button>
             </div>
         </div><div class="item">
             <figure>
@@ -82,8 +97,8 @@
             </figure>
             <div class="info-product">
                 <h2>Elegance</h2>
-                <p2>Price: 125$</p2>
-                <button>Add to cart</button>
+                <p>$125</p>
+                <button class="btn-add-cart">Add to cart</button>
             </div>
         </div><div class="item">
             <figure>
@@ -91,8 +106,8 @@
             </figure>
             <div class="info-product">
                 <h2>Picnic for two</h2>
-                <p2>Price: 55$</p2>
-                <button>Add to cart</button>
+                <p>$55</p>
+                <button class="btn-add-cart">Add to cart</button>
             </div>
         </div><div class="item">
             <figure>
@@ -100,14 +115,14 @@
             </figure>
             <div class="info-product">
                 <h2>Field home</h2>
-                <p2>Price: 60$</p2>
-                <button>Add to cart</button>
+                <p>$60</p>
+                <button class="btn-add-cart">Add to cart</button>
             </div>
         </div>
      </div>
      <div class="rightcatalog">
         <div class="rightFloatingBar">
-            <h3><a href="/Pages/newArrivals.html">Shop</a></h3>
+            <h3>Shop</h3>
             <h3><a href="/Pages/newArrivals.html">NEW ARRIVALS</a></h3>
             <h3><a href="/Pages/artframes.html">Artframes</a></h3>
             <h3><a href="/Pages/flowers.html">Flowers</a></h3>
@@ -117,6 +132,6 @@
             <img src="../images/PromoBanner.png" alt ='BannerPromo'/>
         </div>
     </div>
-    <script src="/flowers.js"></script>
+    <script src="../components/cart.js"></script>
 </body>
 </html>
