first real product added

--- a/Pages/flowers.html
+++ b/Pages/flowers.html
@@ -65,7 +65,7 @@
      <div class="container-items">
         <div class="item">
             <figure>
-                <img src="/images/FlowerProducts/Flower1.jpeg" alt="Flower1">
+                <img src="/images/FlowerProducts/Flower1.png" alt="Flower1">
             </figure>
             <div class="info-product">
                 <h2>White Tulips</h2>
