description and price added

--- a/Pages/flowers.html
+++ b/Pages/flowers.html
@@ -68,8 +68,8 @@
                 <img src="/images/FlowerProducts/Flower1.png" alt="Flower1">
             </figure>
             <div class="info-product">
-                <h2>White Tulips</h2>
-                <p>$50</p>
+                <h2>Flower Basket</h2>
+                <p>$25</p>
                 <button class="btn-add-cart">Add to cart</button>
             </div>
         </div>
