second flower added

--- a/Pages/flowers.html
+++ b/Pages/flowers.html
@@ -75,11 +75,11 @@
         </div>
         <div class="item">
             <figure>
-                <img src="/images/FlowerProducts/Flower2.jpeg" alt="Flower2">
+                <img src="/images/FlowerProducts/Flower2.png" alt="Flower2">
             </figure>
             <div class="info-product">
-                <h2>Yellow Roses</h2>
-                <p>$150</p>
+                <h2>Crown Flowers</h2>
+                <p>$50</p>
                 <button class="btn-add-cart">Add to cart</button>
             </div>
         </div><div class="item">
