third flower added

--- a/Pages/flowers.html
+++ b/Pages/flowers.html
@@ -84,11 +84,11 @@
             </div>
         </div><div class="item">
             <figure>
-                <img src="/images/FlowerProducts/Flower3.jpeg" alt="Flower3">
+                <img src="/images/FlowerProducts/Flower3.png" alt="Flower3">
             </figure>
             <div class="info-product">
-                <h2>Decorative SunF</h2>
-                <p>$5</p>
+                <h2>Single Bouquet</h2>
+                <p>$15</p>
                 <button class="btn-add-cart">Add to cart</button>
             </div>
         </div><div class="item">
