--- a/Pages/flowers.html
+++ b/Pages/flowers.html
@@ -82,7 +82,8 @@
                 <p>$50</p>
                 <button class="btn-add-cart">Add to cart</button>
             </div>
-        </div><div class="item">
+        </div>
+        <div class="item">
             <figure>
                 <img src="/images/FlowerProducts/Flower3.png" alt="Flower3">
             </figure>
@@ -91,33 +92,7 @@
                 <p>$15</p>
                 <button class="btn-add-cart">Add to cart</button>
             </div>
-        </div><div class="item">
-            <figure>
-                <img src="/images/FlowerProducts/Flower4.jpeg" alt="Flower4">
-            </figure>
-            <div class="info-product">
-                <h2>Elegance</h2>
-                <p>$125</p>
-                <button class="btn-add-cart">Add to cart</button>
-            </div>
-        </div><div class="item">
-            <figure>
-                <img src="/images/FlowerProducts/Flower5.jpeg" alt="Flower5">
-            </figure>
-            <div class="info-product">
-                <h2>Picnic for two</h2>
-                <p>$55</p>
-                <button class="btn-add-cart">Add to cart</button>
-            </div>
-        </div><div class="item">
-            <figure>
-                <img src="/images/FlowerProducts/Flower6.jpeg" alt="Flower6">
-            </figure>
-            <div class="info-product">
-                <h2>Field home</h2>
-                <p>$60</p>
-                <button class="btn-add-cart">Add to cart</button>
-            </div>
+        
         </div>
      </div>
      <div class="rightcatalog">
